--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,18 @@ body {
   font-size: 70px;
   font-weight: bold;
 }
+.game-description-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+}
+.header-container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+}
+.header-icon {
+  font-size: 40px;
+}
